update references, added guzhang

--- a/references/references.bib
+++ b/references/references.bib
@@ -15,6 +15,17 @@
   Timestamp                = {2015.02.10}
 }
 
+@Source{Guzhang-2010-260,
+  Author                   = {{Wú Yúnyí 伍云姬} and {Chén Ruìqīng 沈瑞清}},
+  Name                     = {Guzhang},
+  Year                     = {2010},
+
+  Crossref                 = {Wu2010},
+
+  Owner                    = {mattis},
+  Timestamp                = {2015.03.05}
+}
+
 @Thesis{Byun2004,
   Title                    = {L'isolat mandarin de Ganzhou},
   Author                   = {Byun, Jiwon},
@@ -23,6 +34,19 @@
   Timestamp                = {2014.01.11},
   Type                     = {PhD},
   Year                     = {2004}
+}
+
+@Book{Wu2010,
+  Title                    = {Xiāngxī Gǔzhàng Wàxiānghuà jiàochá bàogào},
+  Author                   = {{Wú Yúnyí 伍云姬} and {Chén Ruìqīng 沈瑞清}},
+  Year                     = {2010},
+
+  Address                  = {Shànghǎi 上海},
+
+  Owner                    = {mattis},
+  Shortauthor              = {Wú and Chén},
+  Timestamp                = {2015.03.05},
+  Usera                    = {Research report on the Wàxiāng variety of Gǔzhàng in Xiāngxī}
 }
 
 @comment{jabref-entrytype: Source: req[author;coordinates;glottocode;isocode;name;year] opt[crossref;note]}
