updated references for new sources (still sloppy...)

--- a/references/references.bib
+++ b/references/references.bib
@@ -3,50 +3,138 @@
 
 
 @Source{Ganzhou-2004-200,
-  Author                   = {Byun, Jiwon},
-  Name                     = {Ganzhou Mandarin},
-  Year                     = {2004},
+  Author                              = {Byun, Jiwon},
+  Name                                = {Ganzhou Mandarin},
+  Year                                = {2004},
 
-  Crossref                 = {Byun2004},
-  Note                     = {Data was kindly provided by the author.},
+  Crossref                            = {Byun2004},
+  Note                                = {Data was kindly provided by the author.},
 
-  Owner                    = {mattis},
-  Pages                    = {276-281},
-  Timestamp                = {2015.02.10}
+  Owner                               = {mattis},
+  Pages                               = {276-281},
+  Timestamp                           = {2015.02.10}
 }
 
-@Source{Guzhang-2010-260,
-  Author                   = {{Wú Yúnyí 伍云姬} and {Chén Ruìqīng 沈瑞清}},
-  Name                     = {Guzhang},
-  Year                     = {2010},
+@Source{Qimen-1998,
+  Author                              = {Hirata, S.},
+  Name                                = {Qimen},
+  Year                                = {1998},
 
-  Crossref                 = {Wu2010},
+  Crossref                            = {Hirata1998},
 
-  Owner                    = {mattis},
-  Timestamp                = {2015.03.05}
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
+}
+
+@Source{Jiahe-1987,
+  Author                              = {Tsuji, N.},
+  Name                                = {Jiahe},
+  Year                                = {1987},
+
+  Crossref                            = {Tsuji1987},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
+}
+
+@Source{Guzhang-2010,
+  Author                              = {{Wú Yúnyí 伍云姬} and {Chén Ruìqīng 沈瑞清}},
+  Name                                = {Guzhang},
+  Year                                = {2010},
+
+  Crossref                            = {Wu2010},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.05}
+}
+
+@Source{Lechang-2000,
+  Author                              = {{Zhang Shuangqing}},
+  Name                                = {Lechang},
+  Year                                = {2000},
+
+  Crossref                            = {Zhang2000},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
 }
 
 @Thesis{Byun2004,
-  Title                    = {L'isolat mandarin de Ganzhou},
-  Author                   = {Byun, Jiwon},
-  Institution              = {Ecole des Hautes Etudes en Sciences Sociales},
-  Owner                    = {mattis},
-  Timestamp                = {2014.01.11},
-  Type                     = {PhD},
-  Year                     = {2004}
+  Title                               = {L'isolat mandarin de Ganzhou},
+  Author                              = {Byun, Jiwon},
+  Institution                         = {Ecole des Hautes Etudes en Sciences Sociales},
+  Owner                               = {mattis},
+  Timestamp                           = {2014.01.11},
+  Type                                = {PhD},
+  Year                                = {2004}
+}
+
+@Book{Cao2000,
+  Title                               = {Wuyu Chuqu Fangyan Yanjiu},
+  Author                              = {{Cao Zhiyun} and {Akitani Hiroyuki} and {Ota Itsuku}},
+  Publisher                           = {Kobun},
+
+  Address                             = {Tokyo},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
+}
+
+@Source{Changshan-2000,
+  Author                              = {{Cao Zhiyun} and {Akitani Hiroyuki} and {Ota Itsuku}},
+  Name                                = {Changshan},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
+}
+
+@Book{Hirata1998,
+  Title                               = {Huizhou fangyan yanjiu},
+  Author                              = {Hirata, Shoji},
+  Publisher                           = {Kohbun},
+  Year                                = {1998},
+
+  Address                             = {Tokyo},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
+}
+
+@Book{Tsuji1987,
+  Title                               = {Lexicon of a Chinese dialect in south Hunan, China},
+  Author                              = {Tsuji, N.},
+  Publisher                           = {Institute for the study of languages and cultures of Asia and Africa},
+  Year                                = {1987},
+
+  Address                             = {Tokyo},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
 }
 
 @Book{Wu2010,
-  Title                    = {Xiāngxī Gǔzhàng Wàxiānghuà jiàochá bàogào},
-  Author                   = {{Wú Yúnyí 伍云姬} and {Chén Ruìqīng 沈瑞清}},
-  Year                     = {2010},
+  Title                               = {Xiāngxī Gǔzhàng Wàxiānghuà jiàochá bàogào},
+  Author                              = {{Wú Yúnyí 伍云姬} and {Chén Ruìqīng 沈瑞清}},
+  Year                                = {2010},
 
-  Address                  = {Shànghǎi 上海},
+  Address                             = {Shànghǎi 上海},
 
-  Owner                    = {mattis},
-  Shortauthor              = {Wú and Chén},
-  Timestamp                = {2015.03.05},
-  Usera                    = {Research report on the Wàxiāng variety of Gǔzhàng in Xiāngxī}
+  Owner                               = {mattis},
+  Shortauthor                         = {Wú and Chén},
+  Timestamp                           = {2015.03.05},
+  Usera                               = {Research report on the Wàxiāng variety of Gǔzhàng in Xiāngxī}
+}
+
+@Book{Zhang2000,
+  Title                               = {Lechang tuhuar yanjiu},
+  Author                              = {{Zhang Shuangqing}},
+  Publisher                           = {Xiamen Daxue Chubanshe},
+  Year                                = {2000},
+
+  Address                             = {Xiamen},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.08}
 }
 
 @comment{jabref-entrytype: Source: req[author;coordinates;glottocode;isocode;name;year] opt[crossref;note]}
