updated references, added Jixi

--- a/references/references.bib
+++ b/references/references.bib
@@ -88,6 +88,21 @@
   Timestamp                           = {2015.03.08}
 }
 
+@Book{Chen1991,
+  Title                               = {Mǐnyǔ yánjiū},
+  Author                              = {{Chén Zhàngtài 陳章太} and {Lǐ Rúlóng 李如龍}},
+  Publisher                           = {Yǔwén Chūbǎnshè 語文出版社},
+  Year                                = {1991},
+
+  Address                             = {Běijīng 北京},
+
+  Owner                               = {mattis},
+  Shortauthor                         = {Chén and Lǐ},
+  Timestamp                           = {2015.03.08},
+  Usera                               = {Research on Mǐn dialects},
+  Userb                               = {闽语研究}
+}
+
 @Book{Hirata1998,
   Title                               = {Huizhou fangyan yanjiu},
   Author                              = {Hirata, Shoji},
@@ -98,6 +113,20 @@
 
   Owner                               = {mattis},
   Timestamp                           = {2015.03.08}
+}
+
+@Book{Miao1993,
+  Title                               = {Jixi Fangyan Cidian},
+  Author                              = {{Miao Yonghe 繆詠禾}},
+  Publisher                           = {Jiangsu Jiaoyu},
+  Year                                = {1993},
+
+  Address                             = {Nanjing},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.03.23},
+  Usera                               = {Dictionary of the Jixi dialect},
+  Userb                               = {績溪方言詞典}
 }
 
 @Book{Tsuji1987,
