--- a/references/references.bib
+++ b/references/references.bib
@@ -103,6 +103,28 @@
   Userb                               = {闽语研究}
 }
 
+@Misc{Santos2015,
+  Title                               = {Lexicon of Caijia},
+
+  Author                              = {Cortiço dos Santos, Miguel and Lü, Shanshan},
+  HowPublished                        = {Fieldwork Data},
+  Year                                = {2015},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.06.11}
+}
+
+@Misc{He2015,
+  Title                               = {Lexicon of Rucheng},
+
+  Author                              = {He, Lisha},
+  HowPublished                        = {Fieldwork data},
+  Year                                = {2015},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.06.11}
+}
+
 @Book{Hirata1998,
   Title                               = {Huizhou fangyan yanjiu},
   Author                              = {Hirata, Shoji},
@@ -113,6 +135,28 @@
 
   Owner                               = {mattis},
   Timestamp                           = {2015.03.08}
+}
+
+@Misc{Jacques2015,
+  Title                               = {Lexicon of Old Tibetan},
+
+  Author                              = {Jacques, Guillaume},
+  HowPublished                        = {Collection from Sources},
+  Year                                = {2015},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.06.11}
+}
+
+@Misc{Jacques2015b,
+  Title                               = {Lexicon of Japhug},
+
+  Author                              = {Jacques, Guillaume},
+  HowPublished                        = {Fieldwork Data},
+  Year                                = {2015},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.06.11}
 }
 
 @Book{Miao1993,
@@ -127,6 +171,17 @@
   Timestamp                           = {2015.03.23},
   Usera                               = {Dictionary of the Jixi dialect},
   Userb                               = {績溪方言詞典}
+}
+
+@Misc{Sagart2015,
+  Title                               = {Lexicon of Old Chinese},
+
+  Author                              = {Sagart, Laurent},
+  HowPublished                        = {Linguistic Reconstruction},
+  Year                                = {2015},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.06.11}
 }
 
 @Book{Tsuji1987,
@@ -154,6 +209,18 @@
   Usera                               = {Research report on the Wàxiāng variety of Gǔzhàng in Xiāngxī}
 }
 
+@Book{YueHashimoto2005,
+  Title                               = {The Dancun dialect of Taishan},
+  Author                              = {Yue-Hashimoto, Anne},
+  Publisher                           = {Language Information Sciences Research Centre, City University of Hongkong},
+  Year                                = {2005},
+
+  Address                             = {Hongkong},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2015.06.11}
+}
+
 @Book{Zhang2000,
   Title                               = {Lechang tuhuar yanjiu},
   Author                              = {{Zhang Shuangqing}},
@@ -164,6 +231,42 @@
 
   Owner                               = {mattis},
   Timestamp                           = {2015.03.08}
+}
+
+@Reference{Zihui,
+  Title                               = {Hànyǔ fāngyīn zìhuì},
+  Editor                              = {{Běijīng Dàxué 北京大学}},
+  Address                             = {Běijīng 北京},
+  Edition                             = {2},
+  Entryset                            = {ZihuiSet},
+  Entrysubtype                        = {dict},
+  Origdate                            = {1962},
+  Owner                               = {mattis},
+  Publisher                           = {Wénzì Gǎigé 文字改革},
+  Shorteditor                         = {{Běijīng Dàxué}},
+  Shorttitle                          = {Hànyǔ Fāngyīn Zìhuì},
+  Sortname                            = {Beijing, Daxue},
+  Timestamp                           = {2011.11.29},
+  Usera                               = {Chinese dialect character pronunciation list},
+  Userb                               = {漢語方音字彙},
+  Year                                = {1989}
+}
+
+@Reference{Cihui,
+  Title                               = {Hànyǔ fāngyán cíhuì},
+  Editor                              = {{Běijīng Dàxué 北京大学}},
+  Entrysubtype                        = {dict},
+  Location                            = {Běijing 北京},
+  Owner                               = {mattis},
+  Publisher                           = {Wénzì Gǎigé 文字改革},
+  Shorteditor                         = {{Běijīng Dàxué}},
+  Shorthand                           = {CIHUI},
+  Shortitle                           = {Hànyǔ fāngyán cíhuì},
+  Sortname                            = {Beijing, Daxue},
+  Timestamp                           = {2013.11.28},
+  Usera                               = {Chinese dialect vocabularies},
+  Userb                               = {汉语方言词汇},
+  Year                                = {1964}
 }
 
 @comment{jabref-entrytype: Source: req[author;coordinates;glottocode;isocode;name;year] opt[crossref;note]}
