fixes #18, fixes #19, fixes #29

--- a/references/references.bib
+++ b/references/references.bib
@@ -59,22 +59,42 @@
   Timestamp                           = {2015.03.08}
 }
 
+@Book{Zihui,
+  Title                               = {Hànyǔ fāngyīn zìhuì},
+  Address                             = {Běijīng 北京},
+  Author                              = {{Běijīng Dàxué 北京大学}},
+  Publisher                           = {Wénzì Gǎigé 文字改革},
+  Year                                = {1989},
+
+  Edition                             = {2},
+
+  Entryset                            = {ZihuiSet},
+  Entrysubtype                        = {dict},
+  Origdate                            = {1962},
+  Owner                               = {mattis},
+  Shorteditor                         = {{Běijīng Dàxué}},
+  Shorttitle                          = {Hànyǔ Fāngyīn Zìhuì},
+  Sortname                            = {Beijing, Daxue},
+  Timestamp                           = {2011.11.29},
+  Usera                               = {Chinese dialect character pronunciation list},
+  Userb                               = {漢語方音字彙}
+}
+
 @Thesis{Byun2004,
   Title                               = {L'isolat mandarin de Ganzhou},
   Author                              = {Byun, Jiwon},
   Institution                         = {Ecole des Hautes Etudes en Sciences Sociales},
+  Year                                = {2004},
   Owner                               = {mattis},
   Timestamp                           = {2014.01.11},
-  Type                                = {PhD},
-  Year                                = {2004}
+  Type                                = {PhD}
 }
 
 @Book{Cao2000,
   Title                               = {Wuyu Chuqu Fangyan Yanjiu},
+  Address                             = {Tokyo},
   Author                              = {{Cao Zhiyun} and {Akitani Hiroyuki} and {Ota Itsuku}},
   Publisher                           = {Kobun},
-
-  Address                             = {Tokyo},
 
   Owner                               = {mattis},
   Timestamp                           = {2015.03.08}
@@ -90,11 +110,10 @@
 
 @Book{Chen1991,
   Title                               = {Mǐnyǔ yánjiū},
+  Address                             = {Běijīng 北京},
   Author                              = {{Chén Zhàngtài 陳章太} and {Lǐ Rúlóng 李如龍}},
   Publisher                           = {Yǔwén Chūbǎnshè 語文出版社},
   Year                                = {1991},
-
-  Address                             = {Běijīng 北京},
 
   Owner                               = {mattis},
   Shortauthor                         = {Chén and Lǐ},
@@ -114,6 +133,66 @@
   Timestamp                           = {2015.06.11}
 }
 
+@Misc{Dunn2012,
+  Title                               = {Indo-European lexical cognacy database (IELex)},
+
+  Author                              = {Dunn, Michael},
+  Year                                = {2012},
+
+  Entrysubtype                        = {dict},
+  Eprint                              = {http://ielex.mpi.nl/},
+  Eprinttype                          = {URL},
+  Owner                               = {mattis},
+  Shorthand                           = {IELex},
+  Timestamp                           = {2012.07.03}
+}
+
+@Article{Greenhill2015,
+  Title                               = {TransNewGuinea.org: An Online Database of New Guinea Languages},
+  Author                              = {Greenhill, Simon J.},
+  Journal                             = {PLoS ONE},
+  Year                                = {2015},
+  Doi                                 = {10.1371/journal.pone.0141563},
+  Month                               = {10},
+  Number                              = {10},
+  Pages                               = {e0141563},
+  Volume                              = {10},
+
+  _url                                = {http://dx.doi.org/10.1371%2Fjournal.pone.0141563},
+  Abstract                            = {<p>The island of New Guinea has the world’s highest linguistic diversity, with more than 900 languages divided into at least 23 distinct language families. This diversity includes the world’s third largest language family: Trans-New Guinea. However, the region is one of the world’s least well studied, and primary data is scattered across a wide range of publications and more often then not hidden in unpublished “gray” literature. The lack of primary research data on the New Guinea languages has been a major impediment to our understanding of these languages, and the history of the peoples in New Guinea. TransNewGuinea.org aims to collect data about these languages and place them online in a consistent format. This database will enable future research into the New Guinea languages with both traditional comparative linguistic methods and novel cutting-edge computational techniques. The long-term aim is to shed light into the prehistory of the peoples of New Guinea, and to understand why there is such major diversity in their languages.</p>},
+  Owner                               = {mattis},
+  Publisher                           = {Public Library of Science},
+  Timestamp                           = {2016.01.16}
+}
+
+@Article{Greenhill2008,
+  Title                               = {The Austronesian Basic Vocabulary Database: From bioinformatics to lexomics},
+  Author                              = {Greenhill, Simon J. and Blust, Robert and Gray, Russell D.},
+  Journal                             = {Evolutionary Bioinformatics},
+  Year                                = {2008},
+  Pages                               = {271-283},
+  Volume                              = {4},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2016.01.16}
+}
+
+@Incollection{Hattori1973,
+  Title                               = {Japanese dialects},
+  Author                              = {Hattori, Shirō},
+  Booktitle                           = {Diachronic, areal and typological linguistics},
+  Editor                              = {Hoenigswald, Henry M. and Langacre, Robert H.},
+  Year                                = {1973},
+  Number                              = {11},
+  Pages                               = {368-400},
+  Publisher                           = {Mouton},
+  Series                              = {Current Trends in Linguistics},
+
+  Address                             = {The Hague and Paris},
+  Owner                               = {mattis},
+  Timestamp                           = {2016.01.16}
+}
+
 @Misc{He2015,
   Title                               = {Lexicon of Rucheng},
 
@@ -127,11 +206,10 @@
 
 @Book{Hirata1998,
   Title                               = {Huizhou fangyan yanjiu},
+  Address                             = {Tokyo},
   Author                              = {Hirata, Shoji},
   Publisher                           = {Kohbun},
   Year                                = {1998},
-
-  Address                             = {Tokyo},
 
   Owner                               = {mattis},
   Timestamp                           = {2015.03.08}
@@ -159,13 +237,23 @@
   Timestamp                           = {2015.06.11}
 }
 
+@Misc{List2016XXXcognates,
+  Title                               = {The Potential of Automatic Cognate Detection for Historical Linguistics},
+
+  Author                              = {List, Johann-Mattis and Greenhill, Simon and Gray, Russell D.},
+  HowPublished                        = {unpublished manuscript},
+  Year                                = {2016},
+
+  Owner                               = {mattis},
+  Timestamp                           = {2016.01.16}
+}
+
 @Book{Miao1993,
   Title                               = {Jixi Fangyan Cidian},
+  Address                             = {Nanjing},
   Author                              = {{Miao Yonghe 繆詠禾}},
   Publisher                           = {Jiangsu Jiaoyu},
   Year                                = {1993},
-
-  Address                             = {Nanjing},
 
   Owner                               = {mattis},
   Timestamp                           = {2015.03.23},
@@ -186,11 +274,10 @@
 
 @Book{Tsuji1987,
   Title                               = {Lexicon of a Chinese dialect in south Hunan, China},
+  Address                             = {Tokyo},
   Author                              = {Tsuji, N.},
   Publisher                           = {Institute for the study of languages and cultures of Asia and Africa},
   Year                                = {1987},
-
-  Address                             = {Tokyo},
 
   Owner                               = {mattis},
   Timestamp                           = {2015.03.08}
@@ -198,10 +285,9 @@
 
 @Book{Wu2010,
   Title                               = {Xiāngxī Gǔzhàng Wàxiānghuà jiàochá bàogào},
+  Address                             = {Shànghǎi 上海},
   Author                              = {{Wú Yúnyí 伍云姬} and {Chén Ruìqīng 沈瑞清}},
   Year                                = {2010},
-
-  Address                             = {Shànghǎi 上海},
 
   Owner                               = {mattis},
   Shortauthor                         = {Wú and Chén},
@@ -211,11 +297,10 @@
 
 @Book{YueHashimoto2005,
   Title                               = {The Dancun dialect of Taishan},
+  Address                             = {Hongkong},
   Author                              = {Yue-Hashimoto, Anne},
   Publisher                           = {Language Information Sciences Research Centre, City University of Hongkong},
   Year                                = {2005},
-
-  Address                             = {Hongkong},
 
   Owner                               = {mattis},
   Timestamp                           = {2015.06.11}
@@ -223,33 +308,13 @@
 
 @Book{Zhang2000,
   Title                               = {Lechang tuhuar yanjiu},
+  Address                             = {Xiamen},
   Author                              = {{Zhang Shuangqing}},
   Publisher                           = {Xiamen Daxue Chubanshe},
   Year                                = {2000},
 
-  Address                             = {Xiamen},
-
   Owner                               = {mattis},
   Timestamp                           = {2015.03.08}
-}
-
-@Reference{Zihui,
-  Title                               = {Hànyǔ fāngyīn zìhuì},
-  Editor                              = {{Běijīng Dàxué 北京大学}},
-  Address                             = {Běijīng 北京},
-  Edition                             = {2},
-  Entryset                            = {ZihuiSet},
-  Entrysubtype                        = {dict},
-  Origdate                            = {1962},
-  Owner                               = {mattis},
-  Publisher                           = {Wénzì Gǎigé 文字改革},
-  Shorteditor                         = {{Běijīng Dàxué}},
-  Shorttitle                          = {Hànyǔ Fāngyīn Zìhuì},
-  Sortname                            = {Beijing, Daxue},
-  Timestamp                           = {2011.11.29},
-  Usera                               = {Chinese dialect character pronunciation list},
-  Userb                               = {漢語方音字彙},
-  Year                                = {1989}
 }
 
 @Reference{Cihui,
